@@ -1,3 +1,8 @@
+2011-12-19 Riccardo Mottola <rm@gnu.org>
+
+	* GRDocView.m:
+	Guard against invalid print info values
+
 2011-10-30 Riccardo Mottola <rm@gnu.org>
 
 	* GRDocView.m
